--- a/apps/extension/downloads/firefox/pagepouch-extension-firefox-unpacked/popup.html
+++ b/apps/extension/downloads/firefox/pagepouch-extension-firefox-unpacked/popup.html
@@ -1,6 +1,20 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>PagePouch</title><style>body {
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>PagePouch</title>
+  <style>
+    body {
       width: 350px;
       min-height: 400px;
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-    }</style><script defer="defer" src="popup.js"></script></head><body><div id="popup-root"></div></body></html>
+    }
+  </style>
+</head>
+<body>
+  <div id="popup-root"></div>
+  <script src="firefox-popup.js"></script>
+</body>
+</html>
