--- a/apps/extension/dist-firefox/popup.html
+++ b/apps/extension/dist-firefox/popup.html
@@ -6,10 +6,12 @@
   <title>PagePouch</title>
   <style>
     body {
-      width: 350px;
-      min-height: 400px;
+      width: 380px;
+      min-height: 520px;
+      max-height: 600px;
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      overflow: hidden;
     }
   </style>
 </head>
