Fix extension download 404 error - update to PageStash branding
- Replace old pagepouch-extension files with pagestash-extension files
- Update download.html and INSTALLATION_GUIDE.md with PageStash branding
- Add both Chrome and Firefox extension packages
- Include unpacked versions for developer mode installation
- Add EXTENSION_DEPLOYMENT.md guide for future updates

This fixes the 404 error users were seeing when trying to download the Chrome extension from the production site.

--- a/apps/web/public/extension/downloads/pagestash-extension-chrome-unpacked/popup.html
+++ b/apps/web/public/extension/downloads/pagestash-extension-chrome-unpacked/popup.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>PagePouch</title><style>body {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>PageStash</title><style>body {
       width: 350px;
       min-height: 400px;
       margin: 0;
