--- a/apps/web/public/extension/downloads/pagestash-extension-unpacked/popup.html
+++ b/apps/web/public/extension/downloads/pagestash-extension-unpacked/popup.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>PagePouch</title><style>body {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>PageStash</title><style>body {
       width: 350px;
       min-height: 400px;
       margin: 0;
